[gd_scene load_steps=9 format=2]

[ext_resource path="res://TeleportStone.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]

[sub_resource type="SpatialMaterial" id=2]

[sub_resource type="CubeMesh" id=3]

[sub_resource type="CylinderShape" id=4]
radius = 10.0

[sub_resource type="ParticlesMaterial" id=5]
gravity = Vector3( 0, 9.8, 0 )

[sub_resource type="SphereMesh" id=6]

[sub_resource type="BoxShape" id=7]
extents = Vector3( 1.1, 1.1, 1.1 )

[node name="TeleportStone" type="StaticBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
material_override = SubResource( 2 )
mesh = SubResource( 3 )
material/0 = null

[node name="Area" type="Area" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 4 )

[node name="Particles" type="Particles" parent="."]
emitting = false
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 6 )

[node name="Area2" type="Area" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape" type="CollisionShape" parent="Area2"]
shape = SubResource( 7 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="Area2" to="." method="_on_Area2_body_entered"]
